FullError/Grammar/FullErrorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from FullError.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class FullErrorParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		TBOT=1, TTOP=2, IF=3, THEN=4, ELSE=5, TRUE=6, FALSE=7, BOOL=8, LAMBDA=9, 
		ERROR=10, TRY=11, OTHERWISE=12, TYPE=13, USCORE=14, APOSTROPHE=15, DQUOTE=16, 
		BANG=17, HASH=18, TRIANGLE=19, STAR=20, VBAR=21, DOT=22, SEMI=23, COMMA=24, 
		SLASH=25, COLON=26, COLONCOLON=27, EQ=28, EQEQ=29, LSQUARE=30, LT=31, 
		LCURLY=32, LPAREN=33, LEFTARROW=34, LCURLYBAR=35, LSQUAREBAR=36, RCURLY=37, 
		RPAREN=38, RSQUARE=39, GT=40, BARRCURLY=41, BARGT=42, BARRSQUARE=43, COLONEQ=44, 
		ARROW=45, DARROW=46, DDARROW=47, INTV=48, UCID=49, LCID=50, WS=51, TAB=52, 
		NL=53, NL1=54, COMMENT=55;
	public const int
		RULE_toplevel = 0, RULE_command = 1, RULE_binder = 2, RULE_type = 3, RULE_atype = 4, 
		RULE_arrowtype = 5, RULE_term = 6, RULE_appterm = 7, RULE_aterm = 8, RULE_tybinder = 9;
	public static readonly string[] ruleNames = {
		"toplevel", "command", "binder", "type", "atype", "arrowtype", "term", 
		"appterm", "aterm", "tybinder"
	};

	private static readonly string[] _LiteralNames = {
		null, "'Bot'", "'Top'", "'if'", "'then'", "'else'", "'true'", "'false'", 
		"'Bool'", "'lambda'", "'error'", "'try'", "'with'", "'type'", "'_'", "'''", 
		"'\"'", "'!'", "'#'", "'$'", "'*'", "'|'", "'.'", "';'", "','", "'/'", 
		"':'", "'::'", "'='", "'=='", "'['", "'<'", "'{'", "'('", "'<-'", "'{|'", 
		"'[|'", "'}'", "')'", "']'", "'>'", "'|}'", "'|>'", "'|]'", "':='", "'->'", 
		"'=>'", "'==>'", null, null, null, "' '", "'\\t'", "'\\r'", "'\\n'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TBOT", "TTOP", "IF", "THEN", "ELSE", "TRUE", "FALSE", "BOOL", "LAMBDA", 
		"ERROR", "TRY", "OTHERWISE", "TYPE", "USCORE", "APOSTROPHE", "DQUOTE", 
		"BANG", "HASH", "TRIANGLE", "STAR", "VBAR", "DOT", "SEMI", "COMMA", "SLASH", 
		"COLON", "COLONCOLON", "EQ", "EQEQ", "LSQUARE", "LT", "LCURLY", "LPAREN", 
		"LEFTARROW", "LCURLYBAR", "LSQUAREBAR", "RCURLY", "RPAREN", "RSQUARE", 
		"GT", "BARRCURLY", "BARGT", "BARRSQUARE", "COLONEQ", "ARROW", "DARROW", 
		"DDARROW", "INTV", "UCID", "LCID", "WS", "TAB", "NL", "NL1", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FullError.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FullErrorParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FullErrorParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FullErrorParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ToplevelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command() {
			return GetRuleContext<CommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(FullErrorParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ToplevelContext toplevel() {
			return GetRuleContext<ToplevelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FullErrorParser.Eof, 0); }
		public ToplevelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_toplevel; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToplevel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ToplevelContext toplevel() {
		ToplevelContext _localctx = new ToplevelContext(Context, State);
		EnterRule(_localctx, 0, RULE_toplevel);
		try {
			State = 25;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IF:
			case TRUE:
			case FALSE:
			case LAMBDA:
			case ERROR:
			case TRY:
			case LPAREN:
			case UCID:
			case LCID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 20;
				command();
				State = 21;
				Match(SEMI);
				State = 22;
				toplevel();
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 24;
				Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	 
		public CommandContext() { }
		public virtual void CopyFrom(CommandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Command_binderContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCID() { return GetToken(FullErrorParser.LCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BinderContext binder() {
			return GetRuleContext<BinderContext>(0);
		}
		public Command_binderContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_binder(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Command_termContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Command_termContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_term(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Command_tybinderContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullErrorParser.UCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TybinderContext tybinder() {
			return GetRuleContext<TybinderContext>(0);
		}
		public Command_tybinderContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand_tybinder(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 2, RULE_command);
		try {
			State = 32;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new Command_termContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 27;
				term();
				}
				break;
			case 2:
				_localctx = new Command_tybinderContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 28;
				Match(UCID);
				State = 29;
				tybinder();
				}
				break;
			case 3:
				_localctx = new Command_binderContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 30;
				Match(LCID);
				State = 31;
				binder();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BinderContext : ParserRuleContext {
		public BinderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_binder; } }
	 
		public BinderContext() { }
		public virtual void CopyFrom(BinderContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Binder_termContext : BinderContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(FullErrorParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Binder_termContext(BinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinder_term(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Binder_typeContext : BinderContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(FullErrorParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public Binder_typeContext(BinderContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinder_type(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BinderContext binder() {
		BinderContext _localctx = new BinderContext(Context, State);
		EnterRule(_localctx, 4, RULE_binder);
		try {
			State = 38;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case COLON:
				_localctx = new Binder_typeContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 34;
				Match(COLON);
				State = 35;
				type();
				}
				break;
			case EQ:
				_localctx = new Binder_termContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 36;
				Match(EQ);
				State = 37;
				term();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
	 
		public TypeContext() { }
		public virtual void CopyFrom(TypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Type_arrowtypeContext : TypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ArrowtypeContext arrowtype() {
			return GetRuleContext<ArrowtypeContext>(0);
		}
		public Type_arrowtypeContext(TypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_arrowtype(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 6, RULE_type);
		try {
			_localctx = new Type_arrowtypeContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			arrowtype();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtypeContext : ParserRuleContext {
		public AtypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atype; } }
	 
		public AtypeContext() { }
		public virtual void CopyFrom(AtypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class At_boolContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL() { return GetToken(FullErrorParser.BOOL, 0); }
		public At_boolContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_bool(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_ucidContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UCID() { return GetToken(FullErrorParser.UCID, 0); }
		public At_ucidContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_ucid(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_typeContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(FullErrorParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(FullErrorParser.RPAREN, 0); }
		public At_typeContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_type(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_topContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TTOP() { return GetToken(FullErrorParser.TTOP, 0); }
		public At_topContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_top(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class At_botContext : AtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TBOT() { return GetToken(FullErrorParser.TBOT, 0); }
		public At_botContext(AtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAt_bot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AtypeContext atype() {
		AtypeContext _localctx = new AtypeContext(Context, State);
		EnterRule(_localctx, 8, RULE_atype);
		try {
			State = 50;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LPAREN:
				_localctx = new At_typeContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 42;
				Match(LPAREN);
				State = 43;
				type();
				State = 44;
				Match(RPAREN);
				}
				break;
			case TBOT:
				_localctx = new At_botContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 46;
				Match(TBOT);
				}
				break;
			case TTOP:
				_localctx = new At_topContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 47;
				Match(TTOP);
				}
				break;
			case BOOL:
				_localctx = new At_boolContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 48;
				Match(BOOL);
				}
				break;
			case UCID:
				_localctx = new At_ucidContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 49;
				Match(UCID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArrowtypeContext : ParserRuleContext {
		public ArrowtypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arrowtype; } }
	 
		public ArrowtypeContext() { }
		public virtual void CopyFrom(ArrowtypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Arrowtype_atypeContext : ArrowtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public AtypeContext atype() {
			return GetRuleContext<AtypeContext>(0);
		}
		public Arrowtype_atypeContext(ArrowtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrowtype_atype(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Arrowtype_arrowContext : ArrowtypeContext {
		[System.Diagnostics.DebuggerNonUserCode] public AtypeContext atype() {
			return GetRuleContext<AtypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ARROW() { return GetToken(FullErrorParser.ARROW, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArrowtypeContext arrowtype() {
			return GetRuleContext<ArrowtypeContext>(0);
		}
		public Arrowtype_arrowContext(ArrowtypeContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrowtype_arrow(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArrowtypeContext arrowtype() {
		ArrowtypeContext _localctx = new ArrowtypeContext(Context, State);
		EnterRule(_localctx, 10, RULE_arrowtype);
		try {
			State = 57;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				_localctx = new Arrowtype_arrowContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 52;
				atype();
				State = 53;
				Match(ARROW);
				State = 54;
				arrowtype();
				}
				break;
			case 2:
				_localctx = new Arrowtype_atypeContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 56;
				atype();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermContext : ParserRuleContext {
		public TermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_term; } }
	 
		public TermContext() { }
		public virtual void CopyFrom(TermContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Term_lucContext : TermContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LAMBDA() { return GetToken(FullErrorParser.LAMBDA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USCORE() { return GetToken(FullErrorParser.USCORE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(FullErrorParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(FullErrorParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Term_lucContext(TermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerm_luc(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Term_apptermContext : TermContext {
		[System.Diagnostics.DebuggerNonUserCode] public ApptermContext appterm() {
			return GetRuleContext<ApptermContext>(0);
		}
		public Term_apptermContext(TermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerm_appterm(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Term_iftContext : TermContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(FullErrorParser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TermContext[] term() {
			return GetRuleContexts<TermContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term(int i) {
			return GetRuleContext<TermContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode THEN() { return GetToken(FullErrorParser.THEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELSE() { return GetToken(FullErrorParser.ELSE, 0); }
		public Term_iftContext(TermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerm_ift(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Term_tryContext : TermContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TRY() { return GetToken(FullErrorParser.TRY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TermContext[] term() {
			return GetRuleContexts<TermContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term(int i) {
			return GetRuleContext<TermContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OTHERWISE() { return GetToken(FullErrorParser.OTHERWISE, 0); }
		public Term_tryContext(TermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerm_try(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Term_llcidContext : TermContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LAMBDA() { return GetToken(FullErrorParser.LAMBDA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCID() { return GetToken(FullErrorParser.LCID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(FullErrorParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(FullErrorParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Term_llcidContext(TermContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFullErrorVisitor<TResult> typedVisitor = visitor as IFullErrorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerm_llcid(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermContext term() {
		TermContext _localctx = new TermContext(Context, State);
		EnterRule(_localctx, 12, RULE_term);
		try {
			State = 86;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				_localctx = new Term_apptermContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 59;
				appterm(0);
				}
				break;
			case 2:
				_localctx = new Term_iftContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 60;
				Match(IF);
				State = 61;
				term();
				State = 62;
				Match(THEN);
				State = 63;
				term();
				State = 64;
				Match(ELSE);
				State = 65;
				term();
				}
				break;
			case 3:
				_localctx = new Term_llcidContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 67;
				Match(LAMBDA);
				State = 68;
				Match(LCID);
				State = 69;
				Match(COLON);
				State = 70;
				type();
				State = 71;
				Match(DOT);
				State = 72;
				term();
				}
				break;
			case 4:
				_localctx = new Term_lucContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 74;
				Match(LAMBDA);
				State = 75;
				Match(USCORE);
				State = 76;
				Match(COLON);
				State = 77;
				type();
				State = 78;
				Match(DOT);
				State = 79;
				term();
				}
				break;
			case 5:
				_localctx = new Term_tryContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 81;
				Match(TRY);
				State = 82;
				term();
				State = 83;
				Match(OTHERWISE);
				State = 84;
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
